--- a/src/app/core/shell/top-bar/top-bar.component.html
+++ b/src/app/core/shell/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">generator-fabric</a>
+      <a class="navbar-brand" href="/">angular-editor-fabric-js</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a [routerLink]="['']">Home</a></li>
