--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -176,18 +176,21 @@
             <select [(ngModel)]="props.fontFamily" class="form-control" (change)="setFontFamily()">
               <option value="arial">Arial</option>
               <option value="helvetica" selected>Helvetica</option>
-              <option value="myriad pro">Myriad Pro</option>
-              <option value="delicious">Delicious</option>
               <option value="verdana">Verdana</option>
-              <option value="georgia">Georgia</option>
               <option value="courier">Courier</option>
-              <option value="comic sans ms">Comic Sans MS</option>
-              <option value="impact">Impact</option>
-              <option value="monaco">Monaco</option>
-              <option value="optima">Optima</option>
-              <option value="hoefler text">Hoefler Text</option>
-              <option value="plaster">Plaster</option>
-              <!-- <option value="engagement">Engagement</option> -->
+              <option value="Roboto">Roboto</option>
+              <option value="Open Sans">Open Sans</option>
+              <option value="Zilla Slab">Zilla Slab</option>
+              <option value="Lato">Lato</option>
+              <option value="Bellefair">Bellefair</option>
+              <option value="Fresca">Fresca</option>
+              <option value="Raleway">Raleway</option>
+              <option value="Open Sans Condensed">Open Sans Condensed</option>
+              <option value="Indie Flower">Indie Flower</option>
+              <option value="Josefin Sans">Josefin Sans</option>
+              <option value="Inconsolata">Inconsolata</option>
+              <option value="Pacifico">Pacifico</option>
+              <option value="Gloria Hallelujah">Gloria Hallelujah</option>
             </select>
           </div>
         </div>
